# deep_staple

./: .gitignore  LICENSE  MIND_deeplab_training_adapted_model.ipynb  MIND_deeplab_training_adapted_model.py  MIND_deeplab_training_adapted_model_proud_smoke_268.ipynb  MIND_deeplab_training_adapted_model_proud_smoke_268.py  README.md  affine_disurbance_sweep.yaml  main_curriculum_deeplab.ipynb  main_curriculum_deeplab.py  main_deep_staple.ipynb  main_deep_staple.py  profile_output.prof  pyproject.toml  staple.ipynb  staple.py  viz.ipynb  wise_dices.pth
code_mattias/: dp_hello_world_mnist6.ipynb  lraspp_crossmoda_indomain.ipynb  register_crossmoda_tumour.ipynb  run_registration_tumour_t1_t2_crossmoda.ipynb
curriculum_deeplab/: CrossmodaHybridIdLoader.py  HybridIdLoader.py  IxiHybridIdLoader.py  MobileNet_LR_ASPP_3D.py  consensus.ipynb  data_parameters.py  dp_hello_world.ipynb  dp_hello_world_mnist6.ipynb  mindssc.py  ml_data_parameters_utils.py  sparse_adam.py  sparse_sgd.py  utils.py  view_registration_quality.ipynb  visualisation_bck.py
curriculum_deeplab/consensus/: consensus.ipynb  consensus.py
curriculum_deeplab/postprocessing/: nnunet_calculate_consensus_dice.py  nnunet_prepare_dataparameter_consensus_data.py
curriculum_deeplab/preprocessing/: fetch_dataset.ipynb
curriculum_deeplab/preprocessing/tools/dataloader_preparation/: build_levels.py  l3_cochlea_centers.pth  preprocess_new.ipynb  tcia_to_crossmoda.py  tumour_locations.csv
curriculum_deeplab/preprocessing/tools/docker_shared/: .gitignore  startup.sh
curriculum_deeplab/preprocessing/tools/nbia/: .gitignore
curriculum_deeplab/utils/: common_utils.py  constants.py  data_management.py  hashing.py  log_utils.py  mind_utils.py  mindssc.py  nifti_sets.py
curriculum_deeplab/visualization/: viz.ipynb
data_artifacts/: .gitignore  README.md  download_artifacts.sh
data_artifacts/20220113_crossmoda_optimal/: README.md  optimal_reg_left.pth  optimal_reg_right.pth
data_artifacts/20220114_crossmoda_multiple_registrations/: crossmoda_deeds_registered.pth
data_artifacts/20220318_crossmoda_convex_adam_lr/: README.md  crossmoda_convex_registered_new_convex.pth
deep_staple/: CrossmodaHybridIdLoader.py  HybridIdLoader.py  hybrid_id_dataset.py  metrics.py  mindssc.py  mmwhs_dataset.py  visualization.py
deep_staple/consensus/: consensus.ipynb  consensus.py
deep_staple/postprocessing/: nnunet_prepare_dataparameter_consensus_data.py  prepare_nnunet_domain_gap.ipynb
deep_staple/preprocessing/: fetch_dataset.ipynb  prepare_registered_data.ipynb
deep_staple/preprocessing/tools/SlicerDockers/: README.md  build.sh
deep_staple/preprocessing/tools/dataloader_preparation/: build_levels.py  crossmoda_tcia_mapping.csv  preprocess.sh  tcia_to_crossmoda.py
deep_staple/preprocessing/tools/docker_shared/: README.md  install_slicer_rt.py
deep_staple/utils/: log_utils.py  nifti_sets.py  torch_utils.py
hellena/: Deeplab_inference_VerSe19val.ipynb  patch_deeplab_verse.ipynb
(+7 files in other folders)
