[tool.poetry]
name = "deep-staple"
version = "1.0.0"
description = ""
Christian Weihsbach, Alexander Bigalke, Christian N. Kruse, Hellena Hempe, Mattias P Heinrich
authors = ["Christian Weihsbach <christian.weihsbach@uni-luebeck.de>", "Alexander Bigalke <alexander.bigalke@uni-luebeck.de>", "Christian N. Kruse <christian.kruse@uni-luebeck.de>", "Hellena Hempe <hellena.hempe@uni-luebeck.de>", "Mattias P. Heinrich <mattias.heinrich@uni-luebeck.de>"]
readme = "README.md"
packages = [{include = "deep_staple"}]

[tool.poetry.dependencies]
python = "^3.9"
torch = "*"
torchvision = "*"
mdl-seg-class = {git = "git@github.com:MDL-UzL/SegmentationClassification.git", rev = "main"} # TODO clean
meidic-vtach-utils = {git = "git@github.com:MDL-UzL/meidic_vtach_utils.git", rev = "main"} # TODO clean
nibabel = "^3.2.1"
scipy = "^1.6.0"
scikit-image = "^0.18.3"
tqdm = "^4.62.2"
wandb = "^0.12.2"
jupyterlab = "^3.2.0"
ipywidgets = "^7.6.5"
torchio = "^0.18.63"
jupytext = "^1.13.1"
nnunet = "^1.7.0"
pydicom = "^2.3.0"
natsort = "^8.1.0"
paramiko = "^2.10.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
