[tool.poetry]
name = "deep-staple"
version = "1.0.0"
description = ""
authors = ["Christian Weihsbach <christian.weihsbach@uni-luebeck.de>", "Alexander Bigalke <alexander.bigalke@uni-luebeck.de>", "Christian N. Kruse <christian.kruse@uni-luebeck.de>", "Hellena Hempe <hellena.hempe@uni-luebeck.de>", "Mattias P. Heinrich <mattias.heinrich@uni-luebeck.de>"]
readme = "README.md"
packages = [{include = "deep_staple"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
torch = "*"
torchvision = "*"
nibabel = "^3.2.1"
tqdm = "^4.62.2"
wandb = "^0.12.2"
jupyterlab = "^3.2.0"
ipywidgets = "^7.6.5"
torchio = "^0.18.63"
jupytext = "^1.13.1"
nnunet = "^1.7.0"
pydicom = "^2.3.0"
natsort = "^8.1.0"
paramiko = "^2.10.3"
SimpleITK = "^2.1.1"
Pillow = "^9.1.1"
opencv-python = "^4.6.0.66"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
